--- a/clients.html
+++ b/clients.html
@@ -5,100 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Clients - Void Monk Studio</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/clients.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/clients.css">
 </head>
 <body>
-        <header class="nav-container header-transparent fixed-top">
-            <nav class="navbar navbar-expand-lg">
-                <div class="container">
-                    <a class="navbar-brand" href="index.html">VOID MONK STUDIO</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-                        <span class="navbar-toggler-icon"><i class="fas fa-bars" style="color:var(--accent)"></i></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="mainNav">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                            <li class="nav-item"><a class="nav-link active" href="clients.html">Clients</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
+    <header class="nav-container">
+        <nav class="nav-menu">
+            <a href="index.html" class="nav-logo">VOID MONK STUDIO</a>
+            <button class="nav-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="clients.html">Clients</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
-                <section class="clients-hero py-5" data-aos="fade-up">
-                    <div class="container">
-                        <h1>Our Clients</h1>
-                        <p class="lead">Trusted by innovative brands worldwide</p>
-                    </div>
-                </section>
+        <section class="clients-hero">
+            <div class="container">
+                <h1 class="animate-fade-in">Our Clients</h1>
+                <p class="clients-tagline animate-fade-in">
+                    Trusted by innovative brands worldwide
+                </p>
+            </div>
+        </section>
 
-                <section class="client-logos py-5" data-aos="fade-up">
-                    <div class="container">
-                        <div class="row align-items-center g-4">
-                            <div class="col-6 col-md-2 text-center">
-                                <img src="assets/img/client1.png" alt="Client 1" class="img-fluid">
-                            </div>
-                            <div class="col-6 col-md-2 text-center">
-                                <img src="assets/img/client2.png" alt="Client 2" class="img-fluid">
-                            </div>
-                            <div class="col-6 col-md-2 text-center">
-                                <img src="assets/img/client3.png" alt="Client 3" class="img-fluid">
-                            </div>
-                            <div class="col-6 col-md-2 text-center">
-                                <img src="assets/img/client4.png" alt="Client 4" class="img-fluid">
-                            </div>
-                            <div class="col-6 col-md-2 text-center">
-                                <img src="assets/img/client5.png" alt="Client 5" class="img-fluid">
-                            </div>
-                            <div class="col-6 col-md-2 text-center">
-                                <img src="assets/img/client6.png" alt="Client 6" class="img-fluid">
-                            </div>
+        <section class="client-logos">
+            <div class="container">
+                <div class="logo-grid">
+                    <!-- Replace src with actual client logos -->
+                    <div class="logo-card animate-fade-in">
+                        <img src="assets/images/client1.png" alt="Client 1">
+                    </div>
+                    <div class="logo-card animate-fade-in">
+                        <img src="assets/images/client2.png" alt="Client 2">
+                    </div>
+                    <div class="logo-card animate-fade-in">
+                        <img src="assets/images/client3.png" alt="Client 3">
+                    </div>
+                    <div class="logo-card animate-fade-in">
+                        <img src="assets/images/client4.png" alt="Client 4">
+                    </div>
+                    <div class="logo-card animate-fade-in">
+                        <img src="assets/images/client5.png" alt="Client 5">
+                    </div>
+                    <div class="logo-card animate-fade-in">
+                        <img src="assets/images/client6.png" alt="Client 6">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="testimonials">
+            <div class="container">
+                <h2 class="animate-fade-in">What Our Clients Say</h2>
+                <div class="testimonial-grid">
+                    <div class="testimonial-card animate-fade-in">
+                        <p class="quote">"Void Monk Studio transformed our digital presence with their innovative approach and exceptional creativity."</p>
+                        <div class="author">
+                            <p class="name">John Smith</p>
+                            <p class="position">CEO, Tech Innovations</p>
                         </div>
                     </div>
-                </section>
 
-                <section class="testimonials py-5" data-aos="fade-up">
-                    <div class="container">
-                        <h2 class="text-center mb-4">What Our Clients Say</h2>
-                        <div class="row g-4">
-                            <div class="col-md-4">
-                                <div class="card testimonial-card p-4 h-100">
-                                    <p class="quote">"Void Monk Studio transformed our digital presence with their innovative approach and exceptional creativity."</p>
-                                    <p class="mb-0"><strong>John Smith</strong><br><small>CEO, Tech Innovations</small></p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="card testimonial-card p-4 h-100">
-                                    <p class="quote">"Their attention to detail and commitment to excellence sets them apart in the industry."</p>
-                                    <p class="mb-0"><strong>Sarah Johnson</strong><br><small>Marketing Director, Creative Solutions</small></p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="card testimonial-card p-4 h-100">
-                                    <p class="quote">"Working with Void Monk Studio was a game-changing experience for our brand."</p>
-                                    <p class="mb-0"><strong>Michael Chen</strong><br><small>Founder, Future Labs</small></p>
-                                </div>
-                            </div>
+                    <div class="testimonial-card animate-fade-in">
+                        <p class="quote">"Their attention to detail and commitment to excellence sets them apart in the industry."</p>
+                        <div class="author">
+                            <p class="name">Sarah Johnson</p>
+                            <p class="position">Marketing Director, Creative Solutions</p>
                         </div>
                     </div>
-                </section>
+
+                    <div class="testimonial-card animate-fade-in">
+                        <p class="quote">"Working with Void Monk Studio was a game-changing experience for our brand."</p>
+                        <div class="author">
+                            <p class="name">Michael Chen</p>
+                            <p class="position">Founder, Future Labs</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
-        <footer>
-            <div class="container text-center py-4">
-                <p>© 2025 Void Monk Studio — All Rights Reserved.</p>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2025 Void Monk Studio. All rights reserved.</p>
+            <div class="social-links">
+                <a href="#" target="_blank">LinkedIn</a>
+                <a href="#" target="_blank">Twitter</a>
+                <a href="#" target="_blank">Instagram</a>
             </div>
-        </footer>
+        </div>
+    </footer>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-        <script src="assets/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
